--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jeedy/node_web-scraping-imagefiles#readme",
   "dependencies": {
-    "cheerio-httpcli": "^0.7.1"
+    "cheerio-httpcli": "^0.7.1",
+    "xml2js": "^0.4.19"
   }
 }
